# OpenSD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
docs/: requirements-rtd.txt
docs/source/: conf.py  index.rst  quickinstall.rst  theoryguide.rst  tutorials.rst  usersguide.rst
docs/source/Tutorials/: Tutorial1.ipynb  index.rst
docs/source/devguide/: contributing.rst  index.rst  sds.rst
include/opensd/: bc.h  capi.h  circuit.h  connection.h  constants.h  convergence.h  error.h  face.h  facether.h  flow_solver.h  geometry.h  geometry_aux.h  initialize.h  memory.h  node.h  pipe.h  post.h  settings.h  simulation.h  string_utils.h  vector.h  xml_interface.h
opensd/: __init__.py  _xml.py  bc.py  branch.py  checkvalue.py  circuit.py  executor.py  geometry.py  model.py  node.py  pipe.py  plots.py  project.py  settings.py
src/: bc.cpp  circuit.cpp  connection.cpp  convergence.cpp  error.cpp  face.cpp  facether.cpp  flow_solver.cpp  geometry.cpp  geometry_aux.cpp  initialize.cpp  main.cpp  node.cpp  pipe.cpp  post.cpp  settings.cpp  simulation.cpp  string_utils.cpp  xml_interface.cpp
tutorials/: Tutorial1.ipynb
tutorials/tutorial1/: tutorial1.ipynb
